<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_50"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15">

        <TextView
            android:id="@+id/textView35"
            style="@style/TextView.Comfortaa14Grey_900"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:text="@string/penting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvtitleInfo" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            style="@style/TextView.Comfortaa14Grey_900"
            android:text="@string/kentnumum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView35"
            app:layout_constraintTop_toBottomOf="@+id/textView35" />

        <TextView
            android:id="@+id/textView53"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="18dp"
            android:text="@string/_1_ketum"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView52"
            app:layout_constraintTop_toBottomOf="@+id/textView52" />

        <TextView
            android:id="@+id/textView54"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/_2_ketum"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView53"
            app:layout_constraintTop_toBottomOf="@+id/textView53" />

        <TextView
            android:id="@+id/textView55"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/_3_ketum"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView54"
            app:layout_constraintTop_toBottomOf="@+id/textView54" />

        <TextView
            android:id="@+id/textView56"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:text="@string/ketnpengu"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView52"
            app:layout_constraintTop_toBottomOf="@+id/textView55" />

        <TextView
            android:id="@+id/textView57"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/_1_ketung"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView55"
            app:layout_constraintTop_toBottomOf="@+id/textView56" />

        <TextView
            android:id="@+id/textView58"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/_2_ketung"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView57"
            app:layout_constraintTop_toBottomOf="@+id/textView57" />

        <TextView
            android:id="@+id/textView59"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/_3_ketung"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView58"
            app:layout_constraintTop_toBottomOf="@+id/textView58" />

        <TextView
            android:id="@+id/textView60"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/_4_ketung"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView59"
            app:layout_constraintTop_toBottomOf="@+id/textView59" />

        <TextView
            android:id="@+id/textView61"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/_5_ketung"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView60"
            app:layout_constraintTop_toBottomOf="@+id/textView60" />

        <TextView
            android:id="@+id/textView62"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:text="@string/fiturapk"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView56"
            app:layout_constraintTop_toBottomOf="@+id/textView61" />

        <TextView
            android:id="@+id/textView63"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/_1_apk"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView61"
            app:layout_constraintTop_toBottomOf="@+id/textView62" />

        <TextView
            android:id="@+id/textView64"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/_2_apk"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView63"
            app:layout_constraintTop_toBottomOf="@+id/textView63" />

        <TextView
            android:id="@+id/textView65"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/_3_apk"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView64"
            app:layout_constraintTop_toBottomOf="@+id/textView64" />

        <TextView
            android:id="@+id/textView66"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:text="@string/ketunak"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView62"
            app:layout_constraintTop_toBottomOf="@+id/textView65" />

        <TextView
            android:id="@+id/textView67"
            style="@style/TextView.Comfortaa14Grey_900"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="140dp"
            android:text="@string/ketunakhir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView66"
            app:layout_constraintTop_toBottomOf="@+id/textView66"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView67"
            app:srcCompat="@drawable/homeindicator" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/itemsyaratketentuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>