<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_50"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15">

        <TextView
            android:id="@+id/textView36"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:text="@string/des1"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:text="@string/definisi"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView36"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/des2"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView37"
            app:layout_constraintTop_toBottomOf="@+id/textView37" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="18dp"
            android:text="@string/_1des"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView38"
            app:layout_constraintTop_toBottomOf="@+id/textView38" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/_2des"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView39"
            app:layout_constraintTop_toBottomOf="@+id/textView39" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/_3des"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView40"
            app:layout_constraintTop_toBottomOf="@+id/textView40" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:text="@string/tujuan"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView38"
            app:layout_constraintTop_toBottomOf="@+id/textView41" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/des3"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView42"
            app:layout_constraintTop_toBottomOf="@+id/textView42" />

        <TextView
            android:id="@+id/textView44"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:text="@string/infoyang"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView43"
            app:layout_constraintTop_toBottomOf="@+id/textView43" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/_1info"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView41"
            app:layout_constraintTop_toBottomOf="@+id/textView44" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/_2info"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView45"
            app:layout_constraintTop_toBottomOf="@+id/textView45" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:text="@string/infootomatis"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView44"
            app:layout_constraintTop_toBottomOf="@+id/textView46" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/_1_info"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView46"
            app:layout_constraintTop_toBottomOf="@+id/textView47" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/_2_info"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView48"
            app:layout_constraintTop_toBottomOf="@+id/textView48" />

        <TextView
            android:id="@+id/textView50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:text="@string/berbagi"
            style="@style/TextView.Comfortaa14Grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView47"
            app:layout_constraintTop_toBottomOf="@+id/textView49" />

        <TextView
            android:id="@+id/textView51"
            style="@style/TextView.Comfortaa14Grey_900"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="150dp"
            android:text="@string/kontak"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView50"
            app:layout_constraintTop_toBottomOf="@+id/textView50" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/textView51"
            app:layout_constraintStart_toStartOf="@+id/textView51"
            app:layout_constraintTop_toBottomOf="@+id/textView51"
            app:srcCompat="@drawable/homeindicator" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/itemKebijakan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>